--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-07-30	Kugou Music 1.0.1
+	* add a system tray
+
 2013-06-04	Kugou Music 1.0.0
 	* removed kugou.png and kugou.desktop to data dir
 
